@@ -81,7 +81,7 @@ public class ConstantInitializerTest {
     public void testEqualsTrue() {
         checkEquals(init, true);
         ConstantInitializer<Integer> init2 = new ConstantInitializer<Integer>(
-                new Integer(VALUE.intValue()));
+                Integer.valueOf(VALUE.intValue()));
         checkEquals(init2, true);
         init = new ConstantInitializer<Integer>(null);
         init2 = new ConstantInitializer<Integer>(null);
